research/k8s/nginx/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - 6ab9-14-187-105-14.ap.ngrok.io
      secretName: 6ab9-14-187-105-14.ap.ngrok.io
  rules:
    - host: 6ab9-14-187-105-14.ap.ngrok.io
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: fastapi-server-service
                port:
                  number: 80
          - path: /web?(.*)
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
    # - host: web.hello-world.info
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: fastapi-server-service
    #             port:
    #               number: 80
